--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
   <div class="container">
     <h1>Resume Analyzer</h1>
     <p class="subtitle">Upload your resume to get personalized job recommendations</p>
-
+    
     <div class="upload-container">
       <label for="resumeUpload" class="upload-label">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          width="24"
-          height="24"
-        >
-          <path fill="none" d="M0 0h24v24H0z" />
-          <path
-            d="M3 19h18v2H3v-2zm10-9v8h-2v-8H4l8-8 8 8h-7z"
-          />
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+          <path fill="none" d="M0 0h24v24H0z"/>
+          <path d="M3 19h18v2H3v-2zm10-9v8h-2v-8H4l8-8 8 8h-7z"/>
         </svg>
         <span id="fileName">Choose PDF Resume</span>
       </label>
@@ -37,16 +30,9 @@
     </div>
 
     <div id="error" class="status-box error hidden">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-        width="24"
-        height="24"
-      >
-        <path fill="none" d="M0 0h24v24H0z" />
-        <path
-          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-7v2h2v-2h-2zm0-8v6h2V7h-2z"
-        />
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+        <path fill="none" d="M0 0h24v24H0z"/>
+        <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-7v2h2v-2h-2zm0-8v6h2V7h-2z"/>
       </svg>
       <p id="errorMessage"></p>
     </div>
